--- a/src/main/webapp/pages/labClinico/examenes.xhtml
+++ b/src/main/webapp/pages/labClinico/examenes.xhtml
@@ -22,7 +22,7 @@
             <div class="header-replace">
                 <div class="container-header" >
                     <div class="row lf" style="margin-top: 0.05%; margin-left: 2%" >
-                        <h2>#{examenHome.managed? messages['common.edit'] : messages['common.add']} #{examenHome.instance.name}</h2>   
+                        <h2>#{examenHome.managed? messages['common.edit'] : messages['common.add']} #{'examen de laboratorio clínico: '} #{examenHome.instance.name}</h2>   
                     </div>
                 </div>
             </div>
@@ -248,7 +248,7 @@
                     </div>                   
 
                     <div class="admin-actions">
-                        <p:commandButton id="save1" value="#{messages['common.add']}" oncomplete="editDlg.hide();"                                           
+                        <p:commandButton id="save1" value="#{messages['common.save']}" oncomplete="editDlg.hide();"                                           
                                          action="#{examenHome.agregarParametro()}" update="@form :form:parametros1 :edit-dialog"
                                          style="margin: 0 0 0 30%">  
                             <!--recetaListaServicio.entregarReceta()--> 
