--- a/src/main/webapp/pages/farmacia/medicamento/medicamento.xhtml
+++ b/src/main/webapp/pages/farmacia/medicamento/medicamento.xhtml
@@ -116,7 +116,7 @@
                                 <div class="input" >
                                     <p:calendar  id="fechaCaducidad" value="#{medicamentoHome.instance.fechaCaducidad}" styleClass="xLarge" required="true" label="Fecha de Caducidad" 
                                                  rendered="true" disabled="false" navigator="true" showButtonPanel="false" disabledWeekends="false" locale="es" pattern="dd-MM-yyyy">                            
-                                        <p:ajax event="dateSelect" process="fechaIngreso fechaElaboracion fechaCaducidad validadorFechas" rendered="save" update="fnp1 fc form:messages"/>  
+                                        <p:ajax event="dateSelect" process="fechaIngreso fechaElaboracion fechaCaducidad " rendered="save" update="fnp1 fc form:messages"/>  
                                         <!--Con el atributo process de p:ajax se puede activar el validadorFechas de seam   -->
                                     </p:calendar>                                                
                                     <h:graphicImage value="#{resource['success.gif']}" rendered="#{medicamentoHome.instance.fechaCaducidad != null}"
@@ -124,7 +124,8 @@
                                     <span class="help-inline"><br/>#{messages['common.fechacaducidadmedicamento.lineaAyuda']}<ocp:message forId="fechaCaducidad" /></span>
                                 </div>                    
                             </h:panelGroup>  
-                            <s:validateForm id="validadorFechas" validatorId="validadorFechasMedicamento" />
+                            <!--<s:validateForm id="validadorFechas" validatorId="validadorFechasMedicamento" />-->
+                            
                             <glue:input id="casaComercial" name="casaComercial" type="text" label="#{messages['common.casaComercialProveedora']}" value="#{medicamentoHome.instance.casaComercialProveedora}" required="true" inlinehelp="#{messages['common.casacaomercial.inlinehelp']}" execute="@this save" render="casaComercial"/>
                             <glue:input id="dirCasaComercial" name="dirCasaComercial" type="text" label="#{messages['common.dircasacomercial']}" value="#{medicamentoHome.instance.dirCasaComercial}" required="false" inlinehelp="#{messages['common.dircasacomercial']}" execute="@this save" render="dirCasaComercial"/>                                                        
                             <glue:input id="dosificacion" name="dosificacion" type="textarea" label="Dosifición" value="#{medicamentoHome.instance.dosificacion}" 
